--- a/README
+++ b/README
@@ -1,11 +1,15 @@
-SunRay Server on Ubuntu/Linux installation package
+SunRay Server on Debian/Linux installation package
 ==================================================
 
 This package is trying to provide all necessary stuff that is required
-to install the SunRay Software (SRS) on an Ubuntu/Linux server. In fact,
-it is the attempt to provide a kind of a 'package' that has everything
-embedded to get the SRS installed on Ubuntu/Linux with just a single
-shell script execution.
+to install the SunRay Software (SRS) on an Debian Squeeze (6.0.4). In
+fact, it is the attempt to provide a kind of a 'package' that has
+everything embedded to get the SRS installed on Debian/Linux with just
+a single shell script execution (or two).
+
+It assumes clean install and will pull in all necessary packages WITHOUT
+asking for explicit confirmation. Use at your own risk; and do first
+install on a test installation before pushing it into production(!)
 
 Please note, that this installation package is NOT officially supported
 by Oracle, nor does it come with ANY implied or explicit warranty that
@@ -25,40 +29,33 @@ Installation
 
 To install SRS you need to follow this procedure:
 
-(1) Unarchive this installation package to a temporary directory
+(1) Checkout this package somewhere
 
-    tar xjf srs-ubuntu-install-1.0.tar.bz2
-
-(2) Change your current directory to "srs-ubuntu-install"
-
-    cd srs-ubuntu-install
+(2) Change your current directory to it
 
 (3) Download the SRS installation zip from https://edelivery.oracle.com
-    to the srs-ubuntu-install directory.
+    to the checked out directory (or one level above).
 
-(4) Make sure you have the gdm-2.20.10 packages installed. Eventually
-    install it via:
+    It was tested with V26743-01.zip but might work with other versions.
 
-    dpkg -i deb/gdm-2.20_2.20.10-0ubuntu3_amd64.deb
-
-(5) Make sure you have an OSS enabled kernel installed. Eventually
-    install it via:
- 
-    dpkg -i deb/linux-headers-2.6.38.7-srss_2.6.38.7-srss-10.00.Custom_amd64.deb
-    dpkg -i deb/linux-image-2.6.38.7-srss_2.6.38.7-srss-10.00.Custom_amd64.deb
-
-(6) Make sure to reboot your system in case you install the new kernel
-    from (5) and verify that the kernel is running after the reboot.
-    After reboot, change to the temporary directory again where the
-    srs-ubuntu-install packages was extracted to.
-
-(7) Run the "srs-ubuntu-install.sh" script and answer all questions
+(4) Run the "srs-deb-squeeze-install.sh" script and answer all questions
     accordingly.
 
-    ./srs-ubuntu-install.sh
+    ./srs-deb-squeeze-install.sh
 
-(8) After the installation is finished make sure to reboot your server
-    for proper operation of the SRS
+(5) You might be asked to fix DHCPd config and re-run the script. Just
+    use your brain and/or email me (Michal Jirku) if you get into
+    trouble.
+
+    Most likely you'll have to add "subnet" definition(s) to your
+    /etc/dhcp/dhcpd.conf like this:
+
+    subnet 10.0.0.0 netmask 255.255.255.0 {
+      not authoritative;
+    }
+
+(6) After the installation is finished make sure to follow the
+    instructions displayed at the end
 
 License
 =======
@@ -70,5 +67,10 @@ the same page you found this package or sent it over to me.
 
 Author/Copyright
 ================
+Original SRS-Ubuntu:
 Jens Langner <Jens.Langner@light-speed.de>
 www.jens-langner.de
+
+Patch for SRS-Debian-Squeeze:
+Michal Jirku <box@wejn.org>
+http://wejn.org/
